--- a/templates/index.html
+++ b/templates/index.html
@@ -41,8 +41,8 @@
 <body>
     <h1>Hello Deepseek</h1>
     <div class="button-container">
-        <button  >Login</button>
-        <button  >Register</button>
+        <a href="/login"><button>Login</button></a>
+        <a href="/register"><button>Register</button></a>
     </div>
 </body>
 </html>
