--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,8 @@
             gap: 20px;
         }
         .button-container button {
-            padding: 15px 30px;
+            width: 320px;
+            padding: 12px;
             font-size: 18px;
             border: none;
             border-radius: 5px;
